deployments/workloads/media/radarr/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "radarr"
spec:
  endpointSelector:
    matchLabels:
      app: radarr
  egress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9696"
              protocol: TCP
            - port: "53"
              protocol: ANY
  ingress:
    - toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
